--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <section class="relative h-auto min-h-[calc(100vh-72px)] flex items-center justify-center text-center py-20">
             <!-- Arka Plan Görseli -->
             <div class="absolute inset-0">
-                <img src="https://github.com/demircole004-a11y/bagis/blob/706bb235f515d72ec3215b9fe80a94378000cae7/iyilikgemisi.jpg" 
+                <img src="https://github.com/demircole004-a11y/bagis/blob/706bb235f515d72ec3215b9fe80a94378000cae7/iyilikgemisi.jpg"?raw=true 
                      alt="AFAD Yardım Ekibi" 
                      class="w-full h-full object-cover">
                 <!-- Overlay -->
@@ -1378,3 +1378,4 @@
 </body>
 
 </html>
+
